James, Leon Merge

--- a/pabutools/visualisation/templates/mes_template.html
+++ b/pabutools/visualisation/templates/mes_template.html
@@ -1023,7 +1023,7 @@
     </script> #}
     <script src="https://unpkg.com/@popperjs/core@2"></script>
     <script src="https://unpkg.com/tippy.js@6"></script>
-    <script>tippy('[data-tippy-content]', { allowHTML: true, maxWidth: 1000});
-    </script>
+    <script>tippy('[data-tippy-content]', { allowHTML: true, maxWidth: 1000});</script>
+    <script type="text/javascript" src="https://unpkg.com/default-passive-events"></script>
 </body>
 </html>
